Deadlock in Kitchensink when trying to print compile queues causing timeout

XMLWordPrintable

    • b22

        See summary.


        From glue.process.err:

        [...]
        [glue.process.err] --- Starting stress process ----------------------------------------------------
        [glue.process.err] Starting at: Wed Jun 20 11:38:40 PDT 2018
        [...]
        [glue.process.err] [picker.process.err] Picker module finished at [Wed Jun 20 12:09:19 PDT 2018]: Jcmd
        [glue.process.err] [picker.process.err] Picker module finished at [Wed Jun 20 12:10:33 PDT 2018]: NMT
        [glue.process.err] [picker.process.err] Picker module finished at [Wed Jun 20 12:13:40 PDT 2018]: Jfr
        [glue.process.err] [Wed Jun 20 12:13:40 PDT 2018] (1529522020672) Picker process has been shutdown
        [glue.process.err] [Wed Jun 20 12:13:40 PDT 2018] (1529522020674) Stress process is about to shutdown
        [end-of-log]

        Forcefully terminated by CI.

        CI started at

        [2018-06-20T18:35:53,405Z][INFO][pool-1-thread-1][c.o.j.s.e.d.m.ME] Launching task: [...]
        [...]
        [2018-06-20T21:35:53,725Z][WARN][ForkJoinPool.commonPool-worker-1][c.o.j.s.e.d.m.ME] Executor timeout reached. Forcefully aborting execution.

              Assignee:
              Tobias Hartmann
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: