8205472: Deadlock in Kitchensink when trying to print compile queues causing timeout

Do not acquire the MethodCompileQueue_lock in CompileBroker::print_compile_queues().

Reviewed-by: kvn, kbarrett, dholmes